# COMP3000

./: COMP3000.sln  README.md
.github/workflows/: dotnetWorkflow.yml  main_cybertrack.yml
Documents/: Report.docx  ~$Report.docx
Documents/Design/: .$AndroidSEALSwimlanes.png.dtmp  .$COMP3000 DB Design(1).drawio.bkp  .$COMP3000 DB Design(1).drawio.dtmp  .$PackageDeviceRegisterProcess.drawio.bkp  .$PackageDiagram.drawio.dtmp  COMP3000 DB Design(1).drawio  COMP3000 DB Design.drawio  PackageDeviceRegisterProcess.drawio  PackageDiagram.drawio  PackageLoginProcess.drawio
Documents/Design/Database/: COMP3000 DB Design.drawio
Documents/Documentation/: API.xlsx  APIAccessLevels.xlsx  ~$APIAccessLevels.xlsx
Documents/Planning & Scheduling/: Initial Gantt Chart.xlsx  Initial Project Notes.docx  Project Initiation.docx  Risk Plan.docx
Documents/Sprint meetings/: Week 2 notes.txt
Source Code/Android/: settings.gradle.kts
Source Code/Android/app/: build.gradle.kts
Source Code/Android/gradle/: libs.versions.toml
Source Code/dotnet/: Program.cs  main.cs
SourceCode/: SourceCode.sln
SourceCode/Android/app/: build.gradle.kts
SourceCode/Android/app/src/main/cpp/: CMakeLists.txt  seal_jni.cpp
SourceCode/Android/app/src/main/cpp/seal/util/: config.h
SourceCode/React/react-frontend/: package-lock.json  (+1 more)
SourceCode/dotnet/: CyberTrackAPI.csproj  Database.cs  Program.cs
SourceCode/dotnet/Native/seal/: CMakeLists.txt
SourceCode/dotnet/Native/seal/cpp/: base64.h  sealKeygen.cpp  sealWrapper.cpp  seal_wrapper.cpp
publish_output/: CyberTrackAPI.deps.json  web.config
(+73 files in other folders)
